by-yaml/jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: jenkins
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: ui
    - protocol: TCP
      port: 50000
      targetPort: 50000
      name: slaves
  selector:
    app: jenkins
