by-yaml/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins
  namespace: jenkins
spec:
  rules:
  - host: jenkins.ironman.vthink.cloud 
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins
          servicePort: 8080
